end of section 13

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -8,7 +8,8 @@
   },
 
   "ConnectionStrings":{
-    "DefaultConnection":"Data source=chedDarek.db"
+    "DefaultConnection":"Data source=chedDarek.db",
+    "Redis":"localhost"
   },
   "ApiUrl": "https://localhost:5001/"
 }
