--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "font-awesome": "^4.7.0",
     "jarallax": "^1.12.7",
     "jquery": "^3.6.0",
+    "jquery-ui": "^1.12.1",
     "ngx-bootstrap": "^7.0.0",
     "ngx-spinner": "^11.0.2",
     "ngx-toastr": "^14.1.0",
